--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Rao bán giá rẻ (Giá thịt lợn) </h1>
-    <img src="/vanngu" alt="">
+    <img src="/img/vanngu" alt="">
 </body>
 </html>
